==> RIOT-OS/RIOT/cpu/stm32/periph/sdmmc.c <==
#include <errno.h>
#include <inttypes.h>
#include <stdio.h>
#include <string.h>
#include "assert.h"
#include "bitarithm.h"
#include "container.h"
#include "log.h"
#include "periph/gpio.h"
#include "ztimer.h"
#include "sdmmc/sdmmc.h"
#define ENABLE_DEBUG 0
#include "debug.h"
#define _ZTIMER_SLEEP_MS(n)     ztimer_sleep(ZTIMER_MSEC, n)
#define _ZTIMER_SLEEP_MS(n)     ztimer_sleep(ZTIMER_USEC, n * US_PER_MS)
#define SDMMC_IRQ_PRIO  (1)
#define SDMMC_INT_STATIC_CMD (SDMMC_STA_CMDSENT | SDMMC_STA_CMDREND | \
                              SDMMC_STA_CCRCFAIL | SDMMC_STA_CTIMEOUT)
#define SDMMC_INT_STATIC_DATA (SDMMC_STA_DCRCFAIL | SDMMC_STA_DTIMEOUT | \
                               SDMMC_STA_DATAEND  | SDMMC_STA_DBCKEND | \
                               SDMMC_STA_TXUNDERR | SDMMC_STA_RXOVERR | \
                               SDMMC_STA_SDIOIT | SDMMC_STA_STBITERR)
#define SDMMC_INT_STATIC (SDMMC_INT_STATIC_CMD | SDMMC_INT_STATIC_DATA)
#define SDMMC_INT_STATIC_ERROR  (SDMMC_STA_CCRCFAIL | SDMMC_STA_CTIMEOUT \
                                 SDMMC_STA_DCRCFAIL | SDMMC_STA_DTIMEOUT | \
                                 SDMMC_STA_TXUNDERR | SDMMC_STA_RXOVERR)
#define SDMMC_CMD_WAITRESP_SHORT    (SDMMC_CMD_WAITRESP_0)
#define SDMMC_CMD_WAITRESP_LONG     (SDMMC_CMD_WAITRESP_1 | SDMMC_CMD_WAITRESP_0)
#define SDMMC_CLKCR_CLKDIV_400KHZ   (MHZ(48) / KHZ(400) - 2) /* SD clock 400 kHz */
#define SDMMC_CLKCR_CLKDIV_1MHZ     (MHZ(48) / MHZ(1) - 2)   /* SD clock 4 MHz (debug) */

static void _init(sdmmc_dev_t *sdmmc_dev)
{
    stm32_sdmmc_dev_t *dev = container_of(sdmmc_dev, stm32_sdmmc_dev_t, sdmmc_dev);
    assert(dev);

    const sdmmc_conf_t *conf = dev->config;
    assert(conf);

    /* initialize GPIOs */
    _init_pins(sdmmc_dev);

#if defined(CPU_FAM_STM32F2) || defined(CPU_FAM_STM32F4) || \
    defined(CPU_FAM_STM32F7) || defined(CPU_FAM_STM32L4)
    /* TODO: init_clock (use RCC_DCKCFGR2_SDMMCxSEL to select system clock)
     * PLL clock with 48 MHz is used by default, use module periph_usbdev_clk */
#else
#error "STM32 family not supported yet"
#endif

    /* enable peripheral clock */
    periph_clk_en(conf->bus, conf->rcc_mask);

    /* reset and configure the peripheral */
    _config_sdmmc(sdmmc_dev);

#if defined(SDIO)
    assert (conf->dev == SDIO);
    NVIC_SetPriority(SDIO_IRQn, SDMMC_IRQ_PRIO);
    NVIC_EnableIRQ(SDIO_IRQn);
#else /* defined(SDIO) */
#if defined(SDMMC1)
    if (conf->dev == SDMMC1) {
        NVIC_SetPriority(SDMMC1_IRQn, SDMMC_IRQ_PRIO);
        NVIC_EnableIRQ(SDMMC1_IRQn);
    }
#endif
#if defined(SDMMC2)
    else if (conf->dev == SDMMC2) {
        NVIC_SetPriority(SDMMC2_IRQn, SDMMC_IRQ_PRIO);
        NVIC_EnableIRQ(SDMMC2_IRQn);
    }
#endif
#endif /* defined(SDIO) */
}

static int _send_cmd(sdmmc_dev_t *sdmmc_dev, sdmmc_cmd_t cmd_idx, uint32_t arg,
                     sdmmc_resp_t resp_type, uint32_t *resp)
{
    /* to ensure that `sdmmc_send_acmd` is used for application specific commands */
    assert((cmd_idx & SDMMC_ACMD_PREFIX) == 0);

    stm32_sdmmc_dev_t *dev = container_of(sdmmc_dev, stm32_sdmmc_dev_t, sdmmc_dev);
    assert(dev);

    const sdmmc_conf_t *conf = dev->config;
    assert(conf);

    SDMMC_TypeDef *sdmmc = conf->dev;

    /* prepare the CMD register value, it has to be written as in one access */
    uint32_t cmd = (cmd_idx & SDMMC_CMD_CMDINDEX) << SDMMC_CMD_CMDINDEX_Pos;

    switch (resp_type) {
        case SDMMC_NO_R:
            break;
        case SDMMC_R2:
            cmd |= SDMMC_CMD_WAITRESP_LONG;
            break;
        default:
            cmd |= SDMMC_CMD_WAITRESP_SHORT;
            break;
    }

    /* write ARG and enable Command Path State Machine */
    sdmmc->ARG = arg;
    sdmmc->CMD = cmd | SDMMC_CMD_CPSMEN;

    /* clear and enable command related interrupts */
    sdmmc->ICR  &= ~SDMMC_INT_STATIC_CMD;
    sdmmc->MASK &= ~SDMMC_INT_STATIC_CMD;
    sdmmc->MASK |= SDMMC_MASK_CTIMEOUTIE;
    sdmmc->MASK |= (resp_type == SDMMC_NO_R) ? SDMMC_MASK_CMDSENTIE
                                             : SDMMC_MASK_CMDRENDIE |
                                               SDMMC_MASK_CCRCFAILIE;

    /* wait for command sent or response received */
    mutex_lock(&dev->irq_wait);

    /* disable and clear command related static interrupts*/
    sdmmc->MASK &= ~SDMMC_INT_STATIC_CMD;
    sdmmc->ICR &= ~SDMMC_INT_STATIC_CMD;

    /* disable the Command Path State Machine */
    sdmmc->CMD &= ~SDMMC_CMD_CPSMEN;

    if (dev->irq_status & SDMMC_STA_CTIMEOUT) {
        DEBUG("[sdmmc] Timeout error\n");
        return -ETIMEDOUT;
    }
    else if ((dev->irq_status & SDMMC_STA_CCRCFAIL) && (resp_type != SDMMC_R3)) {
        DEBUG("[sdmmc] CRC error in response\n");
        return -EBADMSG;
    }

    if ((resp_type == SDMMC_R1) || (resp_type == SDMMC_R1B)) {
        dev->sdmmc_dev.status = sdmmc->RESP1;
    }

    if (resp) {
        if (resp_type != SDMMC_NO_R) {
            resp[0] = sdmmc->RESP1;
        }
        if (resp_type == SDMMC_R2) {
            resp[1] = sdmmc->RESP2;
            resp[2] = sdmmc->RESP3;
            resp[3] = sdmmc->RESP4;
        }
    }

    return 0;
}

static int _set_bus_width(sdmmc_dev_t *sdmmc_dev, sdmmc_bus_width_t width)
{
    stm32_sdmmc_dev_t *dev = container_of(sdmmc_dev, stm32_sdmmc_dev_t, sdmmc_dev);

    assert(dev);
    assert(dev->config);

    SDMMC_TypeDef *sdmmc = dev->config->dev;

    /* Note: bits have to be cleared and written as a single write operation */
    switch (width) {
    case SDMMC_BUS_WIDTH_1BIT:
        sdmmc->CLKCR = (sdmmc->CLKCR & ~SDMMC_CLKCR_WIDBUS_Msk) |
                       SDMMC_CLKCR_WIDBUS_1BIT;
        break;
    case SDMMC_BUS_WIDTH_4BIT:
        sdmmc->CLKCR = (sdmmc->CLKCR & ~SDMMC_CLKCR_WIDBUS_Msk) |
                       SDMMC_CLKCR_WIDBUS_4BIT;
        break;
    case SDMMC_BUS_WIDTH_8BIT:
        sdmmc->CLKCR = (sdmmc->CLKCR & ~SDMMC_CLKCR_WIDBUS_Msk) |
                       SDMMC_CLKCR_WIDBUS_8BIT;
        break;
    }

    /* prevent to write again data to this register within three SDIOCLK
     * clock periods plus two PCLK2 clock periods */
    _ZTIMER_SLEEP_MS(1);

    return 0;
}

static int _set_clock_rate(sdmmc_dev_t *sdmmc_dev, sdmmc_clock_rate_t rate)
{
    stm32_sdmmc_dev_t *dev = container_of(sdmmc_dev, stm32_sdmmc_dev_t, sdmmc_dev);

    assert(dev);
    assert(dev->config);

    SDMMC_TypeDef *sdmmc = dev->config->dev;

    /* Note: bits have to be cleared and written as a single write operation */
    switch (rate) {
    case SDMMC_CLK_400K:
        sdmmc->CLKCR = (sdmmc->CLKCR & ~(SDMMC_CLKCR_CLKDIV_Msk | SDMMC_CLKCR_BYPASS_Msk)) |
                       SDMMC_CLKCR_CLKDIV_400KHZ;
        break;
#ifdef CONFIG_SDMMC_CLK_MAX
    default:
        /* limit the Default and High Speed clock rates for debugging */
        sdmmc->CLKCR = (sdmmc->CLKCR & ~(SDMMC_CLKCR_CLKDIV_Msk | SDMMC_CLKCR_BYPASS_Msk)) |
                       CONFIG_SDMMC_CLK_MAX;
#else
    case SDMMC_CLK_20M:
        sdmmc->CLKCR = (sdmmc->CLKCR & ~(SDMMC_CLKCR_CLKDIV_Msk | SDMMC_CLKCR_BYPASS_Msk)) |
                       SDMMC_CLKCR_CLKDIV_20MHZ;
        break;
    case SDMMC_CLK_25M:
    case SDMMC_CLK_26M:
        sdmmc->CLKCR = (sdmmc->CLKCR & ~(SDMMC_CLKCR_CLKDIV_Msk | SDMMC_CLKCR_BYPASS_Msk)) |
                       SDMMC_CLKCR_CLKDIV_25MHZ;
        break;
    case SDMMC_CLK_52M:
    case SDMMC_CLK_50M:
        sdmmc->CLKCR = (sdmmc->CLKCR & ~(SDMMC_CLKCR_CLKDIV_Msk | SDMMC_CLKCR_BYPASS_Msk)) |
                       SDMMC_CLKCR_BYPASS_Msk;
        break;
    default:
        return -ENOTSUP;
#endif
    }

    /* prevent to write again data to this register within three SDIOCLK
     * clock cycles plus two PCLK2 clock cycles */
    _ZTIMER_SLEEP_MS(1);

    return 0;
}

static int _xfer_prepare(sdmmc_dev_t *sdmmc_dev, sdmmc_xfer_desc_t *xfer)
{
    stm32_sdmmc_dev_t *dev = container_of(sdmmc_dev, stm32_sdmmc_dev_t, sdmmc_dev);

    assert(dev);
    assert(dev->config);

    SDMMC_TypeDef *sdmmc = dev->config->dev;

    /* SDIO/SD/MMC uses 32-bit words */
    /* TODO: at the moment only 32-bit words supported */
    assert((xfer->block_size % sizeof(uint32_t)) == 0);

    /* stop the Data Path State Machine and set the block size */
    sdmmc->DCTRL = 0;

    /* configure data transfer */
    sdmmc->DTIMER = xfer->write ? SDMMC_DATA_W_TIMEOUT : SDMMC_DATA_R_TIMEOUT;
    sdmmc->DLEN = xfer->block_size * xfer->block_num;

#if IS_USED(MODULE_PERIPH_DMA)
    const sdmmc_conf_t *conf = dev->config;

    if (_use_dma(conf)) {
        dma_acquire(conf->dma);
        dma_setup(conf->dma, conf->dma_chan, (uint32_t*)&(conf->dev->FIFO),
                  xfer->write ? DMA_MEM_TO_PERIPH : DMA_PERIPH_TO_MEM,
                  DMA_DATA_WIDTH_WORD, false);
        /* additional configuration needed for F2/F4/F7 */
        dma_setup_ext(conf->dma, DMA_BURST_INCR4, DMA_BURST_INCR4,
                      true, DMA_FIFO_FULL, true);
    }
#endif

    return 0;
}

static int _xfer_execute(sdmmc_dev_t *sdmmc_dev, sdmmc_xfer_desc_t *xfer,
                         const void *data_wr, void *data_rd,
                         uint16_t *done)
{
    assert(xfer);
    assert((xfer->write && data_wr) || (!xfer->write && data_rd));

    /* check the alignment required for the buffers */
    assert(HAS_ALIGNMENT_OF(data_wr, SDMMC_CPU_DMA_ALIGNMENT));
    assert(HAS_ALIGNMENT_OF(data_rd, SDMMC_CPU_DMA_ALIGNMENT));

    stm32_sdmmc_dev_t *dev = container_of(sdmmc_dev, stm32_sdmmc_dev_t, sdmmc_dev);
    assert(dev);

    const sdmmc_conf_t *conf = dev->config;
    assert(conf);

    SDMMC_TypeDef *sdmmc = conf->dev;

    uint32_t *data_to_read = data_rd;
    const uint32_t *data_to_write = data_wr;

    /* clear data transfer related static interrupt flags */
    sdmmc->ICR = SDMMC_INT_STATIC_DATA;

    /* enable used data interrupts */
    uint32_t status_mask = SDMMC_MASK_DCRCFAILIE | SDMMC_MASK_DTIMEOUTIE;
    status_mask |= xfer->write ? SDMMC_MASK_TXUNDERRIE : SDMMC_MASK_RXOVERRIE;
    status_mask |= (xfer->block_num == 1) ? SDMMC_MASK_DBCKENDIE
                                          : SDMMC_MASK_DATAENDIE;
#if defined(SDMMC_MASK_STBITERRIE)
    /* Some CMSIS headers define the STBITERR enable and clear flag but not
     * the status flag. For such MCU models, the STBITERR flag is not documented
     * in the RM but marked as reserved. */
    status_mask |= SDMMC_MASK_STBITERRIE;
#endif

    sdmmc->MASK |= status_mask;

    /* configure data transfer block size, read direction and enable the transfer */
    uint32_t dctrl = 0;
    dctrl |= bitarithm_msb(xfer->block_size) << SDMMC_DCTRL_DBLOCKSIZE_Pos;
    dctrl |= !xfer->write ? SDMMC_DCTRL_DTDIR : 0;

    /* TODO: at the moment only 32-bit word transfers supported */
    assert((xfer->block_size % sizeof(uint32_t)) == 0);
    uint32_t fifo_words = sdmmc->DLEN >> 2; /* 32-bit words to read or write */

    /* read data blocks from or write data blocks to the card */
    if (_use_dma(conf)) {
#if IS_USED(MODULE_PERIPH_DMA)
        dma_prepare(conf->dma,
                    (xfer->write) ? (void *)data_to_write : data_to_read,
                    fifo_words, 1);
        dma_start(conf->dma);

        /* TODO SDMMC_IDMA_IDMAEN
         * The SDMMC of the L4+ and some L5 MCUs have an internal DMA controller
         * (IDMA) instead of using the DMA periphery. This internal DMA requires
         * separate handling. Since `_use_dma` just returns `false` if
         * `SDMMC_IDMA_IDMAEN` is defined, this part of the code isn't used and
         * should be optimized out by the compiler. */

        dctrl |= SDMMC_DCTRL_DMAEN;
        sdmmc->DCTRL = dctrl | SDMMC_DCTRL_DTEN;

        /* wait for DBCKEND, DATAEND or any error interrupt */
        mutex_lock(&dev->irq_wait);

        /* stop and release DMA */
        dma_stop(conf->dma);
        dma_release(conf->dma);
#endif
    }
    else {
        /* start the Data Path State Machine */
        sdmmc->DCTRL = dctrl | SDMMC_DCTRL_DTEN;

        do {
            if (xfer->write) {
                /* Fill the TX FIFO as long as TXFIFOF (TX FIFO Full) is not set
                 * and further data have to be written. */
                while (((sdmmc->STA & SDMMC_STA_TXFIFOF) == 0) && fifo_words) {
                    sdmmc->FIFO = *data_to_write++;
                    fifo_words--;
                }
                /* Once the FIFO is full and more data needs to be sent, wait
                 * for TXFIFOHE (TX FIFO Half Empty), i.e. there are at least
                 * 8 32-bit words available in the FIFO again. TXFIFOHE is
                 * dynamic and can't be cleared. It is therefore disabled in
                 * ISR to prevent endless triggering. */
                if (fifo_words) {
                    sdmmc->MASK |= status_mask | SDMMC_MASK_TXFIFOHEIE;
                }
                /* wait for TXFIFOHE or any other status interrupt */
                mutex_lock(&dev->irq_wait);
            }
            else {
                /* If further data have to be read, read all available data
                 * from the RX FIFO (as long as RXDAVL is set) at once */
                while ((sdmmc->STA & SDMMC_STA_RXDAVL) && fifo_words) {
                    *data_to_read++ = sdmmc->FIFO;
                    fifo_words--;
                }
                /* If there are still at least 8 32-bit words to be read, wait
                 * until at least 8 32-bit words have been received in the FIFO.
                 * RXFIFOHF interrupt is dynamic and can't be cleared. It is
                 * therefore disabled in ISR to prevent endless triggering. */
                if (fifo_words >= 8) {
                    sdmmc->MASK |= SDMMC_MASK_RXFIFOHFIE;
                }
                /* wait for RXFIFOHF or any other status interrupt */
                mutex_lock(&dev->irq_wait);
            }
        } while (!(dev->irq_status & status_mask));

        if (!xfer->write) {
            /* read remaining data from RX FIFO if there are any */
            while (sdmmc->STA & SDMMC_STA_RXDAVL) {
                *data_to_read++ = sdmmc->FIFO;
            }
        }
    }

    /* disable the Data Path State Machine */
    sdmmc->DCTRL = 0;

    /* disable and clear all data transfer related static interrupts */
    sdmmc->MASK &= ~SDMMC_INT_STATIC_DATA;
    sdmmc->ICR = SDMMC_INT_STATIC_DATA;

    if (done) {
        *done = xfer->block_num - (sdmmc->DCOUNT / xfer->block_size);
    }

    if (dev->irq_status & SDMMC_STA_DTIMEOUT) {
        return -ETIMEDOUT;
    }
    else if (dev->irq_status & SDMMC_STA_DCRCFAIL) {
        return -EBADMSG;
    }
    else if (dev->irq_status & SDMMC_STA_RXOVERR) {
        return -EOVERFLOW;
    }
    else if (dev->irq_status & SDMMC_STA_TXUNDERR) {
        return -EOVERFLOW;
    }
#if defined(SDMMC_STA_STBITERR)
    else if (dev->irq_status & SDMMC_STA_STBITERR) {
        return -EIO;
    }
#endif

    return 0;
}

static void _isr_cd_pin(void *arg)
{
    stm32_sdmmc_dev_t *dev = arg;
    assert(dev);

    const sdmmc_conf_t *conf = dev->config;
    assert(conf);

    sdmmc_dev_t *sdmmc_dev = &dev->sdmmc_dev;

    sdmmc_dev->present = gpio_read(conf->cd) == conf->cd_active;
    sdmmc_dev->init_done = false;

    if (sdmmc_dev->event_cb) {
        sdmmc_dev->event_cb(sdmmc_dev,
                            sdmmc_dev->present ? SDMMC_EVENT_CARD_INSERTED
                                               : SDMMC_EVENT_CARD_REMOVED);
    }
}
